force-app/main/default/objects/Recommendation__c/Recommendation__c.object-meta.xml
<CustomObject>
    <description>The 추천 이력 object records each product recommendation the Opportunity Radar makes for a 고객사: 추천 상품, 추천 유형 (업셀/크로스셀/만기차환), 성공 가능성 점수, a wallet snapshot (고객 지갑, 우리 잔액, 지갑 점유율, 화이트스페이스), 예상 금액, 근거, and 상태 tracked to the linked 영업기회 outcome. Commonly used for RM next-best-action and recommendation performance analytics.</description>
    <label>추천 이력</label>
    <nameField>
        <displayFormat>REC-{00000}</displayFormat>
        <label>추천 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>추천 이력</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>