force-app/main/default/objects/Recommendation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>고객사</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>추천 이력</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>