force-app/main/default/objects/Recommendation__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <label>생성 시각</label>
    <type>DateTime</type>
</CustomField>