force-app/main/default/objects/Recommendation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>영업기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>추천 이력</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>