force-app/main/default/objects/Recommendation__c/fields/Our_Balance__c.field-meta.xml
<CustomField>
    <fullName>Our_Balance__c</fullName>
    <label>우리 잔액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>