force-app/main/default/objects/Recommendation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>추천 상품</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>추천 이력</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>