force-app/main/default/objects/Recommendation__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>근거</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>