force-app/main/default/objects/Recommendation__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>성공 가능성 점수</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>