force-app/main/default/objects/Recommendation__c/fields/Score_Detail__c.field-meta.xml
<CustomField>
    <fullName>Score_Detail__c</fullName>
    <label>점수 상세</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>