force-app/main/default/objects/Recommendation__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>생성 출처</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>레이더</fullName>
                <default>true</default>
                <label>레이더</label>
            </value>
            <value>
                <fullName>에이전트</fullName>
            </value>
            <value>
                <fullName>미팅요약</fullName>
            </value>
            <value>
                <fullName>시드</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>