force-app/main/default/objects/Recommendation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>상태</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>제안됨</fullName>
                <default>true</default>
                <label>제안됨</label>
            </value>
            <value>
                <fullName>기회생성</fullName>
            </value>
            <value>
                <fullName>수주</fullName>
            </value>
            <value>
                <fullName>실패</fullName>
            </value>
            <value>
                <fullName>보류</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>