force-app/main/default/objects/Recommendation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>추천 유형</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>업셀</fullName>
            </value>
            <value>
                <fullName>크로스셀</fullName>
            </value>
            <value>
                <fullName>만기차환</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>