force-app/main/default/objects/Recommendation__c/fields/Wallet_Amount__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Amount__c</fullName>
    <label>고객 지갑</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>