force-app/main/default/objects/Recommendation__c/fields/Wallet_Basis__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Basis__c</fullName>
    <label>지갑 산출 기준</label>
    <length>80</length>
    <type>Text</type>
</CustomField>