force-app/main/default/objects/Recommendation__c/fields/Wallet_Share__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Share__c</fullName>
    <label>지갑 점유율</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>