force-app/main/default/objects/Recommendation__c/fields/Whitespace_Amount__c.field-meta.xml
<CustomField>
    <fullName>Whitespace_Amount__c</fullName>
    <label>화이트스페이스</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>